# Debugger

./: docker-compose.yml
.github/workflows/: cd.yml  ci.yml  test-secrets.yml
core/: go.mod  main.go
core/handler/: trace.go
core/internal/trace/: collector.go
docker/: Dockerfile-core  Dockerfile-python
go-sdk/: debugr.go
python-sdk/: pyproject.toml  requirements.txt
python-sdk/debugr/: cli.py  sdk.py
