[tool.poetry]
name = "debugr"
version = "0.1.0"
description = "Debug-as-a-Service SDK and CLI"
authors = ["Ojas Singh <ojas856@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28"
click = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
